--- a/ML/diab pred/diabetes.ipynb
+++ b/ML/diab pred/diabetes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0877576a",
    "metadata": {},
    "outputs": [],
@@ -12,19 +12,17 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2704d9d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "dataset = pd.read_csv('diabetes.csv')"
    ]
   },
@@ -448,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0016c041",
    "metadata": {},
    "outputs": [
@@ -466,21 +464,17 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import itertools\n",
-    "\n",
     "col = dataset.columns[:8]\n",
     "length = len(col)\n",
-    "\n",
     "plt.figure(figsize=(20, 15))\n",
-    "\n",
     "for i, j in itertools.zip_longest(col, range(length)):\n",
-    "    plt.subplot(length // 2, 3, j + 1)  # ✅ integer division\n",
+    "    plt.subplot(length // 2, 3, j + 1)\n",
     "    plt.subplots_adjust(wspace=0.3, hspace=0.5)\n",
     "    dataset[i].hist(bins=20, color='skyblue', edgecolor='black')\n",
     "    plt.title(i, fontsize=12)\n",
     "    plt.xlabel('')\n",
     "    plt.ylabel('Frequency')\n",
-    "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
